# cureid-ingest

./: .copier-answers.yml  LICENSE  README.md  download.yaml  justfile  pyproject.toml
scripts/: write_metadata.py
src/: transform.py  transform.yaml  versions.py
tests/: test_cureid.py
